src/test/run-pass/vec-fixed-length.rs
fn main() {
    let x: [int*4] = [1, 2, 3, 4];
    io::println(fmt!("%d", x[0]));
}

